--- a/html5scrumcards.html
+++ b/html5scrumcards.html
@@ -26,6 +26,7 @@
 
     <script src="jquery-1.10.2.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="screendimension.js"></script>
     <script src="custom.js"></script>
     </body>
 </html>
