reimplemented resize, now based on main content height

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     </div>
 
     <div id="main" class="mainview-content row-fluid">
-        <div id="points" class="text-center large-figure">
-            400
-        </div>
+        <div id="points" class="text-center large-figure">ini</div>
     </div>
 
     <div id="footer" class="mainview-footer row-fluid">
@@ -28,5 +26,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="screendimension.js"></script>
     <script src="custom.js"></script>
+    <!-- init  -->
+    <script> resizeScreenDimension(); </script>
     </body>
 </html>
