button and points visibility and fadeInOut corrected

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div id="main" class="mainview-content row-fluid">
-        <div id="points" class="text-center large-figure">ini</div>
+        <div id="points" class="text-center large-figure muted">ini</div>
     </div>
 
     <div id="footer" class="mainview-footer row-fluid">
