basic scrum cards implemented

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <script src="jquery-1.10.2.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="underscore-min.js"></script>
+
     <script src="screendimension.js"></script>
     <script src="custom.js"></script>
     <!-- init  -->
