--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
 
     <div class="header row-fluid">
-        <div id="header" class="span2 offset10"><button class="btn btn-large btn-block btn-warning" type="button"><i class=" icon-wrench"></i></button></div>
+        <!--<div id="header" class="span2 offset10"><button class="btn btn-large btn-block btn-warning" type="button"><i class=" icon-wrench"></i></button></div>-->
     </div>
 
     <div id="main" class="content row-fluid">
@@ -20,19 +20,19 @@
 
         <div id="segmentScrumPoints">
             <div id="row1" class="row-fluid upper-row">
-                <div id="point1" class="span4 text-center">100</div>
-                <div id="point2" class="span4 text-center">200</div>
-                <div id="point3" class="span4 text-center">300</div>
+                <div id="point0" class="span4 text-center">1</div>
+                <div id="point1" class="span4 text-center">2</div>
+                <div id="point2" class="span4 text-center">3</div>
             </div>
             <div id="row2" class="row-fluid middle-row">
-                <div id="point4" class="span4 text-center">400</div>
-                <div id="point5" class="span4 text-center">500</div>
-                <div id="point6" class="span4 text-center">600</div>
+                <div id="point3" class="span4 text-center">5</div>
+                <div id="point4" class="span4 text-center">8</div>
+                <div id="point5" class="span4 text-center">13</div>
             </div>
             <div id="row3" class="row-fluid lower-row">
-                <div id="point7" class="span4 text-center">700</div>
-                <div id="point8" class="span4 text-center">800</div>
-                <div id="point9" class="span4 text-center">900</div>
+                <div id="point6" class="span4 text-center">20</div>
+                <div id="point7" class="span4 text-center">40</div>
+                <div id="point8" class="span4 text-center">100</div>
             </div>
         </div>
     </div>
