--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="main" class="content row-fluid">
 
         <div id="segmentMainPoint">
-            <div id="mainPointContent" class="span12 text-center large-figure muted">ini</div>
+            <div id="mainPointContent" class="span12 text-center large-figure muted">100</div>
         </div>
 
         <div id="segmentScrumPoints">
@@ -57,6 +57,7 @@
     <!-- init  -->
     <script>
         initPointsDisplay();
+        initPointButtonHandlers();
         resizeScreenDimension();
     </script>
     </body>
