touch targets for scrum values created

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 
         <div id="segmentScrumPoints">
             <div id="row1" class="row-fluid spRow1">
-                <div id="point0" class="span4 text-center">0</div>
-                <div id="point1" class="span4 text-center">&#189;</div>
-                <div id="point2" class="span4 text-center">1</div>
+                <div id="point0" class="span4 text-center scrumValue">0</div>
+                <div id="point1" class="span4 text-center scrumValue">&#189;</div>
+                <div id="point2" class="span4 text-center scrumValue">1</div>
             </div>
             <div id="row2" class="row-fluid spRow2">
-                <div id="point3" class="span4 text-center">2</div>
-                <div id="point4" class="span4 text-center">3</div>
-                <div id="point5" class="span4 text-center">5</div>
+                <div id="point3" class="span4 text-center scrumValue">2</div>
+                <div id="point4" class="span4 text-center scrumValue">3</div>
+                <div id="point5" class="span4 text-center scrumValue">5</div>
             </div>
             <div id="row3" class="row-fluid spRow3">
-                <div id="point6" class="span4 text-center">8</div>
-                <div id="point7" class="span4 text-center">13</div>
-                <div id="point8" class="span4 text-center">20</div>
+                <div id="point6" class="span4 text-center scrumValue">8</div>
+                <div id="point7" class="span4 text-center scrumValue">13</div>
+                <div id="point8" class="span4 text-center scrumValue">20</div>
             </div>
             <div id="row4" class="row-fluid spRow4">
-                <div id="point9"  class="span4 text-center">40</div>
-                <div id="point10" class="span4 text-center">100</div>
-                <div id="point11" class="span4 text-center">&#63;</div>
+                <div id="point9"  class="span4 text-center scrumValue">40</div>
+                <div id="point10" class="span4 text-center scrumValue">100</div>
+                <div id="point11" class="span4 text-center scrumValue">&#63;</div>
             </div>
         </div>
     </div>
