--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>  
     <head>
         <title>scrumcards5</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link href="custom.css" rel="stylesheet" media="screen">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     </head>
@@ -57,7 +57,7 @@
     <!-- init  -->
     <script>
         initPointsDisplay();
-        resizeScreenDimension();
+        resizeElementDimensions();
     </script>
     </body>
 </html>
