vertical alignment of scrum values implemented

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="underscore-min.js"></script>
 
-    <script src="screendimension.js"></script>
-    <script src="custom.js"></script>
+    <script src="logic.js"></script>
+    <script src="handler.js"></script>
     <!-- init  -->
     <script>
         initPointsDisplay();
