background contrast implemented

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div id="header" class="header row-fluid">
         <div class="span4"><button id="info" class="btn btn-large btn-block btn" type="button"><i class="icon-info-sign"></i></button></div>
-        <div class="span4"><button id="bookmark" class="btn btn-large btn-block btn" type="button"><i class="icon-bookmark"></i></button></div>
-        <div class="span4"><button id="settings" class="btn btn-large btn-block btn" type="button"><i class="icon-wrench"></i></button></div>
+        <div class="span4"><button id="fullscreen" class="btn btn-large btn-block btn" type="button"><i class="icon-fullscreen"></i></button></div>
+        <div class="span4"><button id="settings" class="btn btn-large btn-block btn" type="button"><i class="icon-cog"></i></button></div>
     </div>
 
     <div id="main" class="content row-fluid">
@@ -47,7 +47,7 @@
 
     <div id="footer" class="footer row-fluid">
         <div class="span4"><button id="minus" class="btn btn-large btn-block" type="button"><i class="icon-minus"></i></button></div>
-        <div class="span4"><button id="point" class="btn btn-large btn-block" type="button"><i class="icon-th-large"></i></button></div>
+        <div class="span4"><button id="point" class="btn btn-large btn-block" type="button"><i class="icon-th"></i></button></div>
         <div class="span4"><button id="plus" class="btn btn-large btn-block" type="button"><i class="icon-plus"></i></button></div>
     </div>
 
