fixed some init issues on older browsers

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     <script src="handler.js"></script>
     <!-- init  -->
     <script>
-        initPointsDisplay();
-        resizeElementDimensions();
+        initSc5();
     </script>
     </body>
 </html>
