--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html> 
-<html>  
+<html manifest="index.manifest">
     <head>
         <title>scrumcards5</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <link href="custom.css" rel="stylesheet" media="screen">
+        <link href="index.css" rel="stylesheet" media="screen">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link rel="icon" href="favicon.png" type="image/png">
-        <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     </head>
     <body>
 
