info segment implemented, refactoring

--- a/index.html
+++ b/index.html
@@ -17,10 +17,19 @@
 
     <div id="main" class="content row-fluid">
 
-        <div id="segmentMainPoint">
+        <div id="infoSegment">
+            <div class="row-fluid">
+                <p class="infoContent">Version: 0.1.1</p>
+                <p class="infoContent">Author: Kacper Bak</p>
+                <p class="infoContent">Contact: TODO...</p>
+            </div>
+        </div>
+
+        <div id="mainPointSegment">
             <div id="mainPointContent" class="span12 text-center large-figure muted">sc5</div>
         </div>
-        <div id="segmentScrumPoints">
+
+        <div id="scrumPointsSegment">
             <div id="row1" class="row-fluid spRow1">
                 <div id="point0" class="span4 text-center well well-small scrumValue">0</div>
                 <div id="point1" class="span4 text-center well well-small scrumValue">&#189;</div>
@@ -42,6 +51,7 @@
                 <div id="point11" class="span4 text-center well well-small scrumValue">&#63;</div>
             </div>
         </div>
+
     </div>
 
     <div id="footer" class="footer row-fluid">
@@ -54,6 +64,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="underscore-min.js"></script>
 
+    <script src="infoSegment.js"></script>
     <script src="logic.js"></script>
     <script src="handler.js"></script>
     <!-- init  -->
