--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>scrumcards5</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link href="index.css" rel="stylesheet" media="screen">
+        <link href="font.css" rel="stylesheet" media="screen">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link rel="icon" href="favicon.png" type="image/png">
     </head>
@@ -39,7 +40,7 @@
         
 
         <div id="mainPointSegment">
-            <div id="mainPointContent" class="span12 text-center large-figure muted">sc5</div>
+            <div id="mainPointContent" class="span12 text-center large-figure muted" data-icon="&#xe000;"></div>
         </div>
 
         <div id="scrumPointsSegment">
