--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="font.css" rel="stylesheet" media="screen">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link rel="icon" href="favicon.png" type="image/png">
+        <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     </head>
     <body>
 
