--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- settings menu -->
         <div id="settingsSegment">
             <div class="row-fluid"><div class="span12"><button id="themes" class="btn btn-large btn-block btn" type="button">Themes</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="conf4" class="btn btn-large btn-block btn" type="button">RESET APP</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="resetApp" class="btn btn-large btn-block btn" type="button">RESET APP</button></div></div>
 
         </div>
 
@@ -41,8 +41,8 @@
         </div>
         
         <!-- main scrum value -->
-        <div id="mainPointSegment">
-            <div id="mainPointContent" class="span12 text-center large-figure muted" data-icon="&#xe000;"></div>
+        <div id="mainSegment">
+            <div id="mainContent" class="span12 text-center large-figure muted" data-icon="&#xe000;"></div>
         </div>
 
         <!-- possible scrum values to select -->
@@ -84,6 +84,7 @@
     <script src="js/themesSegment.js"></script>
     <script src="js/settingsSegment.js"></script>
     <script src="js/infoSegment.js"></script>
+    <script src="js/scrumPointsSegment.js"></script>
     <script src="logic.js"></script>
     <script src="handler.js"></script>
     <!-- init  -->
