... js refactoring finished

--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="underscore-min.js"></script>
 
-    <script src="js/themesSegment.js"></script>
-    <script src="js/settingsSegment.js"></script>
-    <script src="js/infoSegment.js"></script>
+    <script src="js/initApp.js"></script>
+    <script src="js/screenDimension.js"></script>
+    <script src="js/mainSegment.js"></script>
     <script src="js/scrumPointsSegment.js"></script>
-    <script src="logic.js"></script>
-    <script src="handler.js"></script>
+    <script src="js/infoSegment.js"></script>
+    <script src="js/settingsSegment.js"></script>
+    <script src="js/themesSegment.js"></script>
     <!-- init  -->
     <script>
         initSc5();
