--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div id="footer" class="footer row-fluid">
         <div class="span4"><button id="minus" class="btn btn-large btn-block" type="button"><i class="icon-minus"></i></button></div>
-        <div class="span4"><button id="point" class="btn btn-large btn-block" type="button"><i class="icon-th"></i></button></div>
+        <div class="span4"><button id="scrumPoints" class="btn btn-large btn-block" type="button"><i class="icon-th"></i></button></div>
         <div class="span4"><button id="plus" class="btn btn-large btn-block" type="button"><i class="icon-plus"></i></button></div>
     </div>
 
