first attempt to color management

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         <!-- main scrum value -->
         <div id="mainSegment">
-            <div id="mainContent" class="span12 text-center large-figure muted" data-icon="&#xe000;"></div>
+            <div id="mainContent" class="span12 text-center large-figure" data-icon="&#xe000;"></div>
         </div>
 
         <!-- possible scrum values to select -->
@@ -83,6 +83,7 @@
 
     <script src="js/initApp.js"></script>
     <script src="js/screenDimension.js"></script>
+    <script src="js/colormanagement.js"></script>
     <script src="js/mainSegment.js"></script>
     <script src="js/scrumPointsSegment.js"></script>
     <script src="js/infoSegment.js"></script>
