--- a/index.html
+++ b/index.html
@@ -12,25 +12,46 @@
     <body>
 
     <div id="header" class="header row-fluid">
-        <div class="span4"><button id="info" class="btn btn-large btn-block btn" type="button"><i class="icon-info-sign"></i></button></div>
+        <div class="span4"><button id="specialChars" class="btn btn-large btn-block btn" type="button"><i class="icon-star"></i></button></div>
         <div class="span4"><button id="fullscreen" class="btn btn-large btn-block btn" type="button"><i class="icon-fullscreen"></i></button></div>
         <div class="span4"><button id="settings" class="btn btn-large btn-block btn" type="button"><i class="icon-cog"></i></button></div>
     </div>
 
     <div id="main" class="content row-fluid">
 
-        <!-- info menu -->
-        <div id="infoSegment" class="row-fluid">
-            <p class="infoContent">Version: 0.1.1</p>
-            <p class="infoContent">Author: Kacper Bak</p>
-            <p class="infoContent">Contact: TODO...</p>
+        <!-- special characters -->
+        <div id="specialCharsSegment">
+            <div class="row-fluid spRow1">
+                <div id="specialChar0" class="span4 text-center well well-small selectValue">sc0</div>
+                <!--<div id="specialChar1" class="span4 text-center well well-small selectValue">sc1</div>-->
+                <!--<div id="specialChar2" class="span4 text-center well well-small selectValue">sc2</div>-->
+            </div>
+
+            <!--
+            <div class="row-fluid spRow2">
+                <div id="specialChar3" class="span4 text-center well well-small selectValue">sc3</div>
+                <div id="specialChar4" class="span4 text-center well well-small selectValue">sc4</div>
+                <div id="specialChar5" class="span4 text-center well well-small selectValue">sc5</div>
+            </div>
+
+            <div class="row-fluid spRow3">
+                <div id="specialChar6" class="span4 text-center well well-small selectValue">sc6</div>
+                <div id="specialChar7" class="span4 text-center well well-small selectValue">sc7</div>
+                <div id="specialChar8" class="span4 text-center well well-small selectValue">sc8</div>
+            </div>
+
+            <div class="row-fluid spRow4">
+                <div id="specialChar9" class="span4 text-center well well-small selectValue">sc9</div>
+                <div id="specialChar10" class="span4 text-center well well-small selectValue">sc10</div>
+                <div id="specialChar11" class="span4 text-center well well-small selectValue">sc11</div>
+            </div>
+            -->
         </div>
 
         <!-- settings menu -->
         <div id="settingsSegment">
             <div class="row-fluid"><div class="span12"><button id="themes" class="btn btn-large btn-block btn" type="button">Themes</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="resetApp" class="btn btn-large btn-block btn" type="button">RESET APP</button></div></div>
-
         </div>
 
         <!-- themes menu -->
@@ -38,6 +59,13 @@
             <div class="row-fluid"><div class="span12"><button id="themeSilver" class="btn btn-large btn-block btn" type="button">SILVER</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="themeRed" class="btn btn-large btn-block btn" type="button">RED</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="themeBlue" class="btn btn-large btn-block btn" type="button">BLUE</button></div></div>
+        </div>
+
+        <!-- info menu -->
+        <div id="infoSegment" class="row-fluid">
+            <p class="infoContent">Version: 0.1.1</p>
+            <p class="infoContent">Author: Kacper Bak</p>
+            <p class="infoContent">Contact: TODO...</p>
         </div>
         
         <!-- main scrum value -->
@@ -47,25 +75,25 @@
 
         <!-- possible scrum values to select -->
         <div id="scrumPointsSegment">
-            <div id="row1" class="row-fluid spRow1">
-                <div id="point0" class="span4 text-center well well-small scrumValue">0</div>
-                <div id="point1" class="span4 text-center well well-small scrumValue">&#189;</div>
-                <div id="point2" class="span4 text-center well well-small scrumValue">1</div>
+            <div class="row-fluid spRow1">
+                <div id="point0" class="span4 text-center well well-small selectValue">0</div>
+                <div id="point1" class="span4 text-center well well-small selectValue">&#189;</div>
+                <div id="point2" class="span4 text-center well well-small selectValue">1</div>
             </div>
-            <div id="row2" class="row-fluid spRow2">
-                <div id="point3" class="span4 text-center well well-small scrumValue">2</div>
-                <div id="point4" class="span4 text-center well well-small scrumValue">3</div>
-                <div id="point5" class="span4 text-center well well-small scrumValue">5</div>
+            <div class="row-fluid spRow2">
+                <div id="point3" class="span4 text-center well well-small selectValue">2</div>
+                <div id="point4" class="span4 text-center well well-small selectValue">3</div>
+                <div id="point5" class="span4 text-center well well-small selectValue">5</div>
             </div>
-            <div id="row3" class="row-fluid spRow3">
-                <div id="point6" class="span4 text-center well well-small scrumValue">8</div>
-                <div id="point7" class="span4 text-center well well-small scrumValue">13</div>
-                <div id="point8" class="span4 text-center well well-small scrumValue">20</div>
+            <div class="row-fluid spRow3">
+                <div id="point6" class="span4 text-center well well-small selectValue">8</div>
+                <div id="point7" class="span4 text-center well well-small selectValue">13</div>
+                <div id="point8" class="span4 text-center well well-small selectValue">20</div>
             </div>
-            <div id="row4" class="row-fluid spRow4">
-                <div id="point9"  class="span4 text-center well well-small scrumValue">40</div>
-                <div id="point10" class="span4 text-center well well-small scrumValue">100</div>
-                <div id="point11" class="span4 text-center well well-small scrumValue">&#63;</div>
+            <div class="row-fluid spRow4">
+                <div id="point9"  class="span4 text-center well well-small selectValue">40</div>
+                <div id="point10" class="span4 text-center well well-small selectValue">100</div>
+                <div id="point11" class="span4 text-center well well-small selectValue">&#63;</div>
             </div>
         </div>
 
@@ -85,6 +113,7 @@
     <script src="js/screenDimension.js"></script>
     <script src="js/colormanagement.js"></script>
     <script src="js/mainSegment.js"></script>
+    <script src="js/specialCharsSegment.js"></script>
     <script src="js/scrumPointsSegment.js"></script>
     <script src="js/infoSegment.js"></script>
     <script src="js/settingsSegment.js"></script>
