info segment replaced into settings, new font icons

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <!-- settings menu -->
         <div id="settingsSegment">
             <div class="row-fluid"><div class="span12"><button id="themes" class="btn btn-large btn-block btn" type="button">Themes</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="info" class="btn btn-large btn-block btn" type="button">Info</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="resetApp" class="btn btn-large btn-block btn" type="button">RESET APP</button></div></div>
         </div>
 
@@ -65,7 +66,7 @@
         <div id="infoSegment" class="row-fluid">
             <p class="infoContent">Version: 0.1.1</p>
             <p class="infoContent">Author: Kacper Bak</p>
-            <p class="infoContent">Contact: TODO...</p>
+            <p class="infoContent">Contact: <a href="http://kacperbak.de">www.kacperbak.de</a></p>
         </div>
         
         <!-- main scrum value -->
