secial characters implemented

--- a/index.html
+++ b/index.html
@@ -22,30 +22,28 @@
         <!-- special characters -->
         <div id="specialCharsSegment">
             <div class="row-fluid spRow1">
-                <div id="specialChar0" class="span4 text-center well well-small selectValue">sc0</div>
-                <!--<div id="specialChar1" class="span4 text-center well well-small selectValue">sc1</div>-->
-                <!--<div id="specialChar2" class="span4 text-center well well-small selectValue">sc2</div>-->
+                <div id="specialChar0" class="span4 text-center well well-small selectValue" data-icon="&#xe007;"></div>
+                <div id="specialChar1" class="span4 text-center well well-small selectValue" data-icon="&#xe009;"></div>
+                <div id="specialChar2" class="span4 text-center well well-small selectValue" data-icon="&#xe008;"></div>
             </div>
 
-            <!--
             <div class="row-fluid spRow2">
-                <div id="specialChar3" class="span4 text-center well well-small selectValue">sc3</div>
-                <div id="specialChar4" class="span4 text-center well well-small selectValue">sc4</div>
-                <div id="specialChar5" class="span4 text-center well well-small selectValue">sc5</div>
+                <div id="specialChar3" class="span4 text-center well well-small selectValue" data-icon="&#xe004;"></div>
+                <div id="specialChar4" class="span4 text-center well well-small selectValue" data-icon="&#xe000;"></div>
+                <div id="specialChar5" class="span4 text-center well well-small selectValue" data-icon="&#xe005;"></div>
             </div>
 
             <div class="row-fluid spRow3">
-                <div id="specialChar6" class="span4 text-center well well-small selectValue">sc6</div>
-                <div id="specialChar7" class="span4 text-center well well-small selectValue">sc7</div>
-                <div id="specialChar8" class="span4 text-center well well-small selectValue">sc8</div>
+                <div id="specialChar6" class="span4 text-center well well-small selectValue" data-icon="&#xe003;"></div>
+                <div id="specialChar7" class="span4 text-center well well-small selectValue" data-icon="&#xe00a;"></div>
+                <div id="specialChar8" class="span4 text-center well well-small selectValue" data-icon="&#xe00b;"></div>
             </div>
 
             <div class="row-fluid spRow4">
-                <div id="specialChar9" class="span4 text-center well well-small selectValue">sc9</div>
-                <div id="specialChar10" class="span4 text-center well well-small selectValue">sc10</div>
-                <div id="specialChar11" class="span4 text-center well well-small selectValue">sc11</div>
+                <div id="specialChar9" class="span4 text-center well well-small selectValue" data-icon="&#xe00d;"></div>
+                <div id="specialChar10" class="span4 text-center well well-small selectValue" data-icon="&#xe00e;"></div>
+                <div id="specialChar11" class="span4 text-center well well-small selectValue" data-icon="&#xe00c;"></div>
             </div>
-            -->
         </div>
 
         <!-- settings menu -->
@@ -71,7 +69,7 @@
         
         <!-- main scrum value -->
         <div id="mainSegment">
-            <div id="mainContent" class="span12 text-center large-figure" data-icon="&#xe000;"></div>
+            <div id="mainContent" class="span12 text-center large-figure" data-icon="&#xe00e;"></div>
         </div>
 
         <!-- possible scrum values to select -->
