colors implemented into settings

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
             <div class="row-fluid"><div class="span12"><button id="themeSilver" class="btn btn-large btn-block btn" type="button">SILVER</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="themeRed" class="btn btn-large btn-block btn" type="button">RED</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="themeBlue" class="btn btn-large btn-block btn" type="button">BLUE</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="themeGreen" class="btn btn-large btn-block btn" type="button">GREEN</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="themeYellow" class="btn btn-large btn-block btn" type="button">YELLOW</button></div></div>
         </div>
 
         <!-- info menu -->
