AfterSelect settings option added, overhead css rules deleted

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <!-- settings menu -->
         <div id="settingsSegment">
             <div class="row-fluid"><div class="span12"><button id="themes" class="btn btn-large btn-block btn" type="button">Themes</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="afterSelect" class="btn btn-large btn-block btn" type="button">After select</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="info" class="btn btn-large btn-block btn" type="button">Info</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="resetApp" class="btn btn-large btn-block btn" type="button">RESET APP</button></div></div>
         </div>
@@ -68,7 +69,13 @@
             <p class="infoContent">Author: Kacper Bak</p>
             <p class="infoContent">Contact: <a href="http://kacperbak.de">www.kacperbak.de</a></p>
         </div>
-        
+
+        <!-- afterSelect menu -->
+        <div id="afterSelectSegment" class="row-fluid">
+            <p class="afterSelectContent">AfterSelect content</p>
+        </div>
+
+
         <!-- main scrum value -->
         <div id="mainSegment">
             <div id="mainContent" class="span12 text-center large-figure" data-icon="&#xe00e;"></div>
@@ -117,6 +124,7 @@
     <script src="js/specialCharsSegment.js"></script>
     <script src="js/scrumPointsSegment.js"></script>
     <script src="js/infoSegment.js"></script>
+    <script src="js/afterSelectSegment.js"></script>
     <script src="js/settingsSegment.js"></script>
     <script src="js/themesSegment.js"></script>
     <!-- init  -->
