--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             </div>
 
             <div class="row-fluid" data-toggle="buttons-radio">
-                <div class="span6"><button class="btn btn-large btn-block btn active" type="button">On</button></div>
-                <div class="span6"><button class="btn btn-large btn-block btn" type="button">Off</button></div>
+                <div class="span6"><button id="visibleMainSymbolOn" class="btn btn-large btn-block btn" type="button">On</button></div>
+                <div class="span6"><button id="visibleMainSymbolOff" class="btn btn-large btn-block btn" type="button">Off</button></div>
             </div>
 
             <div class="row-fluid">
@@ -103,8 +103,8 @@
             </div>
 
             <div class="row-fluid" data-toggle="buttons-radio">
-                <div class="span6"><button class="btn btn-large btn-block btn active" type="button">On</button></div>
-                <div class="span6"><button class="btn btn-large btn-block btn" type="button">Off</button></div>
+                <div class="span6"><button id="smallMainSymbolOn" class="btn btn-large btn-block btn" type="button">On</button></div>
+                <div class="span6"><button id="smallMainSymbolOff" class="btn btn-large btn-block btn" type="button">Off</button></div>
             </div>
         </div>
 
@@ -149,6 +149,7 @@
     <script src="jquery-1.10.2.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="underscore-min.js"></script>
+    <script src="string.min.js"></script>
 
     <script src="js/initApp.js"></script>
     <script src="js/screenDimension.js"></script>
@@ -160,6 +161,8 @@
     <script src="js/afterSelectSegment.js"></script>
     <script src="js/settingsSegment.js"></script>
     <script src="js/themesSegment.js"></script>
+    <script src="js/localStorage.js"></script>
+    <script src="js/debug.js"></script>
     <!-- init  -->
     <script>
         initSc5();
