visible main symbol setting implemented

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <div class="row-fluid">
                 <div class="span12">
-                    <p class="afterSelectContent">After a symbol has been selected, it appears in a light colored version in the main of the screen.</p>
+                    <p class="afterSelectContent">After a symbol has been changed, it appears in a contrast colored version in the main of the screen.</p>
                 </div>
             </div>
 
