local storage value init implemented

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html manifest="index.manifest">
     <head>
+        <meta content="text/html; charset=UTF-8" http-equiv="content-type"/>
         <title>scrumcards5</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <link href="font.css" rel="stylesheet" media="screen">
