--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html manifest="index.manifest">
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="content-type"/>
-        <title>scrumcards5</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <title>scrumcards5</title>
+
+        <meta http-equiv="language" content="en">
+        <meta name="description" content="Mobile Scrum tool for agile software development. Displays Scrum values on all HTML5 capable mobile devices.">
+        <meta name="keywords" content="mobile, scrum, tool, agile, HTML5">
+        <meta name="page-topic" content="Scrum">
+        <meta name="page-type" content="Tool">
+        <meta name="publisher" content="Kacper Bak">
+        <meta name="copyright" content="Kacper Bak">
+        <meta name="robots" content="index,follow">
+
         <link href="font.css" rel="stylesheet" media="screen">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="index.css" rel="stylesheet" media="screen">
@@ -66,9 +76,18 @@
 
         <!-- info menu -->
         <div id="infoSegment" class="row-fluid">
-            <p class="infoContent">Version: 0.1.1</p>
-            <p class="infoContent">Author: Kacper Bak</p>
-            <p class="infoContent">Contact: <a href="http://kacperbak.de">www.kacperbak.de</a></p>
+
+            <!-- max rowsize span 10 see infoContent CSS class -->
+            <div class="row-fluid">
+                <div class="span2 infoContent"><span class="infoContent">Version:</span></div>
+                <div class="span8 infoContent"><span class="infoContent">0.1.0 - Alpha -</span></div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span2 infoContent"><span class="infoContent">Author:</span></div>
+                <div class="span8 infoContent"><span class="infoContent"><a href="http://kacperbak.de">Kacper Bak</a></span></div>
+            </div>
+
         </div>
 
         <!-- afterSelect menu -->
@@ -82,7 +101,7 @@
 
             <div class="row-fluid">
                 <div class="span12">
-                    <p class="afterSelectContent">After a symbol has been changed, it appears in a contrast colored version in the main of the screen.</p>
+                    <p class="afterSelectContent">After a symbol has been changed, it appears in a <strong>contrast</strong> colored version in the main of the screen.</p>
                 </div>
             </div>
 
@@ -99,7 +118,7 @@
 
             <div class="row-fluid">
                 <div class="span12">
-                    <p class="afterSelectContent">After a symbol has been selected, it appears as a small figure in the main of the screen.</p>
+                    <p class="afterSelectContent">After a symbol has been changed, it appears as a <strong>small</strong> figure in the main of the screen.</p>
                 </div>
             </div>
 
