--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="row-fluid"><div class="span12"><button id="themes" class="btn btn-large btn-block btn" type="button">Themes</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="afterSelect" class="btn btn-large btn-block btn" type="button">Main symbol</button></div></div>
             <div class="row-fluid"><div class="span12"><button id="info" class="btn btn-large btn-block btn" type="button">App info</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="resetApp" class="btn btn-large btn-block btn" type="button">RESET APP</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="resetApp" class="btn btn-large btn-block btn" type="button">App reset</button></div></div>
         </div>
 
         <!-- themes menu -->
