disabled google indexing

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <title>scrumcards5</title>
 
         <meta http-equiv="language" content="en">
-        <meta name="description" content="Mobile Scrum tool for agile software development. Displays Scrum values on all HTML5 capable mobile devices.">
+        <meta name="description" content="Mobile Scrum tool for agile software development. Displays Scrum values on all HTML5 capable mogit bile devices.">
         <meta name="keywords" content="mobile, scrum, tool, agile, HTML5">
         <meta name="page-topic" content="Scrum">
         <meta name="page-type" content="Tool">
         <meta name="publisher" content="Kacper Bak">
         <meta name="copyright" content="Kacper Bak">
-        <meta name="robots" content="index,follow">
+        <meta name="robots" content="NOINDEX,NOFOLLOW">
 
         <link href="font.css" rel="stylesheet" media="screen">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
