--- a/scrumcards5.html
+++ b/scrumcards5.html
@@ -14,9 +14,9 @@
         <meta name="copyright" content="Kacper Bak">
         <meta name="robots" content="NOINDEX,NOFOLLOW">
 
-        <link href="font.css" rel="stylesheet" media="screen">
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-        <link href="index.css" rel="stylesheet" media="screen">
+        <link href="css/font.css" rel="stylesheet" media="screen">
+        <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="css/scrumcards5.css" rel="stylesheet" media="screen">
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     </head>
@@ -166,23 +166,23 @@
         <div class="span4"><button id="plus" class="btn btn-large btn-block" type="button"><i class="icon-plus"></i></button></div>
     </div>
 
-    <script src="jquery-1.10.2.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="underscore-min.js"></script>
-    <script src="string.min.js"></script>
+    <script src="js/lib/jquery-1.10.2.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/lib/underscore-min.js"></script>
+    <script src="js/lib/string.min.js"></script>
 
-    <script src="js/initApp.js"></script>
-    <script src="js/screenDimension.js"></script>
-    <script src="js/colormanagement.js"></script>
-    <script src="js/mainSegment.js"></script>
-    <script src="js/specialCharsSegment.js"></script>
-    <script src="js/scrumPointsSegment.js"></script>
-    <script src="js/infoSegment.js"></script>
-    <script src="js/afterSelectSegment.js"></script>
-    <script src="js/settingsSegment.js"></script>
-    <script src="js/themesSegment.js"></script>
-    <script src="js/localStorage.js"></script>
-    <script src="js/debug.js"></script>
+    <script src="js/app/initApp.js"></script>
+    <script src="js/app/screenDimension.js"></script>
+    <script src="js/app/colormanagement.js"></script>
+    <script src="js/app/localStorage.js"></script>
+    <script src="js/app/debug.js"></script>
+    <script src="js/ui/mainSegment.js"></script>
+    <script src="js/ui/specialCharsSegment.js"></script>
+    <script src="js/ui/scrumPointsSegment.js"></script>
+    <script src="js/ui/infoSegment.js"></script>
+    <script src="js/ui/afterSelectSegment.js"></script>
+    <script src="js/ui/settingsSegment.js"></script>
+    <script src="js/ui/themesSegment.js"></script>
     <!-- init  -->
     <script>
         initSc5();
