--- a/scrumcards5.html
+++ b/scrumcards5.html
@@ -16,7 +16,7 @@
 
         <link href="css/font.css" rel="stylesheet" media="screen">
         <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-        <link href="css/scrumcards5.css" rel="stylesheet" media="screen">
+        <link href="css/index.css" rel="stylesheet" media="screen">
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     </head>
@@ -176,6 +176,7 @@
     <script src="js/app/colormanagement.js"></script>
     <script src="js/app/localStorage.js"></script>
     <script src="js/app/debug.js"></script>
+
     <script src="js/ui/mainSegment.js"></script>
     <script src="js/ui/specialCharsSegment.js"></script>
     <script src="js/ui/scrumPointsSegment.js"></script>
