deployment script started ...

--- a/scrumcards5.html
+++ b/scrumcards5.html
@@ -166,6 +166,10 @@
         <div class="span4"><button id="plus" class="btn btn-large btn-block" type="button"><i class="icon-plus"></i></button></div>
     </div>
 
+    <!-- deployment -->
+    <!--<script src="deploy/scrumcards5.js"></script>-->
+
+    <!-- development -->
     <script src="js/lib/jquery-1.10.2.min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/underscore-min.js"></script>
@@ -184,9 +188,8 @@
     <script src="js/ui/afterSelectSegment.js"></script>
     <script src="js/ui/settingsSegment.js"></script>
     <script src="js/ui/themesSegment.js"></script>
+
     <!-- init  -->
-    <script>
-        initSc5();
-    </script>
+    <script>initSc5();</script>
     </body>
 </html>
