--- a/scrumcards5.html
+++ b/scrumcards5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html manifest="index.manifest">
+<html manifest="scrumcards5.manifest">
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="content-type"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -14,9 +14,15 @@
         <meta name="copyright" content="Kacper Bak">
         <meta name="robots" content="NOINDEX,NOFOLLOW">
 
-        <link href="css/font.css" rel="stylesheet" media="screen">
-        <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-        <link href="css/index.css" rel="stylesheet" media="screen">
+
+        <!-- development -->
+        <!--<link href="font.css" rel="stylesheet" media="screen">-->
+        <!--<link href="bootstrap.min.css" rel="stylesheet" media="screen">-->
+        <!--<link href="index.css" rel="stylesheet" media="screen">-->
+
+        <!-- deployment -->
+        <link href="./scrumcards5.css" rel="stylesheet" media="screen">
+
         <link rel="icon" href="favicon.png" type="image/png">
         <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     </head>
@@ -167,27 +173,27 @@
     </div>
 
     <!-- deployment -->
-    <!--<script src="deploy/scrumcards5.js"></script>-->
+    <script src="./scrumcards5.js"></script>
 
     <!-- development -->
-    <script src="js/lib/jquery-1.10.2.min.js"></script>
-    <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/lib/underscore-min.js"></script>
-    <script src="js/lib/string.min.js"></script>
+    <!--<script src="js/lib/jquery-1.10.2.min.js"></script>-->
+    <!--<script src="js/lib/bootstrap.min.js"></script>-->
+    <!--<script src="js/lib/underscore-min.js"></script>-->
+    <!--<script src="js/lib/string.min.js"></script>-->
 
-    <script src="js/app/initApp.js"></script>
-    <script src="js/app/screenDimension.js"></script>
-    <script src="js/app/colormanagement.js"></script>
-    <script src="js/app/localStorage.js"></script>
-    <script src="js/app/debug.js"></script>
+    <!--<script src="js/app/initApp.js"></script>-->
+    <!--<script src="js/app/screenDimension.js"></script>-->
+    <!--<script src="js/app/colormanagement.js"></script>-->
+    <!--<script src="js/app/localStorage.js"></script>-->
+    <!--<script src="js/app/debug.js"></script>-->
 
-    <script src="js/ui/mainSegment.js"></script>
-    <script src="js/ui/specialCharsSegment.js"></script>
-    <script src="js/ui/scrumPointsSegment.js"></script>
-    <script src="js/ui/infoSegment.js"></script>
-    <script src="js/ui/afterSelectSegment.js"></script>
-    <script src="js/ui/settingsSegment.js"></script>
-    <script src="js/ui/themesSegment.js"></script>
+    <!--<script src="js/ui/mainSegment.js"></script>-->
+    <!--<script src="js/ui/specialCharsSegment.js"></script>-->
+    <!--<script src="js/ui/scrumPointsSegment.js"></script>-->
+    <!--<script src="js/ui/infoSegment.js"></script>-->
+    <!--<script src="js/ui/afterSelectSegment.js"></script>-->
+    <!--<script src="js/ui/settingsSegment.js"></script>-->
+    <!--<script src="js/ui/themesSegment.js"></script>-->
 
     <!-- init  -->
     <script>initSc5();</script>
