--- a/scrumcards5.html
+++ b/scrumcards5.html
@@ -29,9 +29,9 @@
     <body>
 
     <div id="header" class="header row-fluid">
-        <div class="span4"><button id="specialChars" class="btn btn-large btn-block btn" type="button"><i class="icon-star"></i></button></div>
-        <div class="span4"><button id="fullscreen" class="btn btn-large btn-block btn" type="button"><i class="icon-fullscreen"></i></button></div>
-        <div class="span4"><button id="settings" class="btn btn-large btn-block btn" type="button"><i class="icon-cog"></i></button></div>
+        <div class="span4"><button id="specialChars" class="btn btn-large btn-block" type="button"><i class="icon-star"></i></button></div>
+        <div class="span4"><button id="fullscreen" class="btn btn-large btn-block" type="button"><i class="icon-fullscreen"></i></button></div>
+        <div class="span4"><button id="settings" class="btn btn-large btn-block" type="button"><i class="icon-cog"></i></button></div>
     </div>
 
     <div id="main" class="content row-fluid">
@@ -65,19 +65,19 @@
 
         <!-- settings menu -->
         <div id="settingsSegment">
-            <div class="row-fluid"><div class="span12"><button id="themes" class="btn btn-large btn-block btn" type="button">Themes</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="afterSelect" class="btn btn-large btn-block btn" type="button">Main symbol</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="info" class="btn btn-large btn-block btn" type="button">App info</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="resetApp" class="btn btn-large btn-block btn" type="button">App reset</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="themes" class="btn btn-large btn-block" type="button">Themes</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="afterSelect" class="btn btn-large btn-block" type="button">Main symbol</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="info" class="btn btn-large btn-block" type="button">App info</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="resetApp" class="btn btn-large btn-block" type="button">App reset</button></div></div>
         </div>
 
         <!-- themes menu -->
         <div id="themesSegment">
-            <div class="row-fluid"><div class="span12"><button id="themeSilver" class="btn btn-large btn-block btn" type="button">SILVER</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="themeRed" class="btn btn-large btn-block btn" type="button">RED</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="themeBlue" class="btn btn-large btn-block btn" type="button">BLUE</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="themeGreen" class="btn btn-large btn-block btn" type="button">GREEN</button></div></div>
-            <div class="row-fluid"><div class="span12"><button id="themeYellow" class="btn btn-large btn-block btn" type="button">YELLOW</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="themeSilver" class="btn btn-large btn-block" type="button">SILVER</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="themeRed" class="btn btn-large btn-block" type="button">RED</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="themeBlue" class="btn btn-large btn-block" type="button">BLUE</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="themeGreen" class="btn btn-large btn-block" type="button">GREEN</button></div></div>
+            <div class="row-fluid"><div class="span12"><button id="themeYellow" class="btn btn-large btn-block" type="button">YELLOW</button></div></div>
         </div>
 
         <!-- info menu -->
@@ -112,8 +112,8 @@
             </div>
 
             <div class="row-fluid" data-toggle="buttons-radio">
-                <div class="span6"><button id="visibleMainSymbolOn" class="btn btn-large btn-block btn" type="button">On</button></div>
-                <div class="span6"><button id="visibleMainSymbolOff" class="btn btn-large btn-block btn" type="button">Off</button></div>
+                <div class="span6"><button id="visibleMainSymbolOn" class="btn btn-large btn-block" type="button">On</button></div>
+                <div class="span6"><button id="visibleMainSymbolOff" class="btn btn-large btn-block" type="button">Off</button></div>
             </div>
 
             <div class="row-fluid">
@@ -129,8 +129,8 @@
             </div>
 
             <div class="row-fluid" data-toggle="buttons-radio">
-                <div class="span6"><button id="smallMainSymbolOn" class="btn btn-large btn-block btn" type="button">On</button></div>
-                <div class="span6"><button id="smallMainSymbolOff" class="btn btn-large btn-block btn" type="button">Off</button></div>
+                <div class="span6"><button id="smallMainSymbolOn" class="btn btn-large btn-block" type="button">On</button></div>
+                <div class="span6"><button id="smallMainSymbolOff" class="btn btn-large btn-block" type="button">Off</button></div>
             </div>
         </div>
 
