--- a/scrumcards5.html
+++ b/scrumcards5.html
@@ -12,7 +12,7 @@
         <meta name="page-type" content="Tool">
         <meta name="publisher" content="Kacper Bak">
         <meta name="copyright" content="Kacper Bak">
-        <meta name="robots" content="NOINDEX,NOFOLLOW">
+        <meta name="robots" content="index,follow">
 
 
         <!-- development -->
@@ -86,12 +86,17 @@
             <!-- max rowsize span 10 see infoContent CSS class -->
             <div class="row-fluid">
                 <div class="span2 infoContent"><span class="infoContent">Version:</span></div>
-                <div class="span8 infoContent"><span class="infoContent">0.1.0 - Alpha -</span></div>
+                <div class="span8 infoContent"><span class="infoContent">0.0.0 - Alpha -</span></div>
             </div>
 
             <div class="row-fluid">
                 <div class="span2 infoContent"><span class="infoContent">Author:</span></div>
                 <div class="span8 infoContent"><span class="infoContent"><a href="http://kacperbak.de">Kacper Bak</a></span></div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span2 infoContent"><span class="infoContent">Contact:</span></div>
+                <div class="span8 infoContent"><span class="infoContent"><a href="mailto:info@scrumcards5.com">E-Mail</a></span></div>
             </div>
 
         </div>
@@ -174,6 +179,19 @@
 
     <!-- deployment -->
     <script src="./scrumcards5.js"></script>
+    <script type="text/javascript">
+
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-26057772-2']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
+    </script>
 
     <!-- development -->
     <!--<script src="js/lib/jquery-1.10.2.min.js"></script>-->
