prod refrences, timestamp in manifest file

--- a/scrumcards5.html
+++ b/scrumcards5.html
@@ -14,12 +14,6 @@
         <meta name="copyright" content="Kacper Bak">
         <meta name="robots" content="index,follow">
 
-
-        <!-- development -->
-        <!--<link href="font.css" rel="stylesheet" media="screen">-->
-        <!--<link href="bootstrap.min.css" rel="stylesheet" media="screen">-->
-        <!--<link href="index.css" rel="stylesheet" media="screen">-->
-
         <!-- deployment -->
         <link href="./scrumcards5.css" rel="stylesheet" media="screen">
 
@@ -179,7 +173,11 @@
 
     <!-- deployment -->
     <script src="./scrumcards5.js"></script>
+
+    <!-- init  -->
     <script type="text/javascript">
+
+        initSc5();
 
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-26057772-2']);
@@ -192,28 +190,5 @@
         })();
 
     </script>
-
-    <!-- development -->
-    <!--<script src="js/lib/jquery-1.10.2.min.js"></script>-->
-    <!--<script src="js/lib/bootstrap.min.js"></script>-->
-    <!--<script src="js/lib/underscore-min.js"></script>-->
-    <!--<script src="js/lib/string.min.js"></script>-->
-
-    <!--<script src="js/app/initApp.js"></script>-->
-    <!--<script src="js/app/screenDimension.js"></script>-->
-    <!--<script src="js/app/colormanagement.js"></script>-->
-    <!--<script src="js/app/localStorage.js"></script>-->
-    <!--<script src="js/app/debug.js"></script>-->
-
-    <!--<script src="js/ui/mainSegment.js"></script>-->
-    <!--<script src="js/ui/specialCharsSegment.js"></script>-->
-    <!--<script src="js/ui/scrumPointsSegment.js"></script>-->
-    <!--<script src="js/ui/infoSegment.js"></script>-->
-    <!--<script src="js/ui/afterSelectSegment.js"></script>-->
-    <!--<script src="js/ui/settingsSegment.js"></script>-->
-    <!--<script src="js/ui/themesSegment.js"></script>-->
-
-    <!-- init  -->
-    <script>initSc5();</script>
     </body>
 </html>
